2026/07-13.txt
1783901528
clevor!sid649024@id-649024.hampstead.irccloud.com
hyper0031: Run zig build after commenting out the fingerprint field.

1783910117
aixin!aixin@user/aixin
I try to build poop(https://github.com/andrewrk/poop), but it doesn't compile: src/main.zig:82:26: error: root source file struct 'process' has no member named 'Init'

1783910127
aixin!aixin@user/aixin
I am using anyzig, the build command is: zig 0.15.1 build

1783910400
perryprog!~perryprog@wikipedia/perryprog
you'll need 0.16.0

1783910561
aixin!aixin@user/aixin
perryprog: thanks, it works. I first try lastest master version of zig it can't compile, then I see the document say it tested in 0.15.1, so I try using 0.15.1  XD

1783910643
perryprog!~perryprog@wikipedia/perryprog
it LIESSS

1783911738
aixin!aixin@user/aixin
I run the poop 'xxxx', and it failed: /home/aixin/.cache/zig/p/N-V-__8AAFFSVRWqblwBIcA-Yqv-u7sbjsJoww8K0mWaHbmJ/lib/std/posix.zig:1498:23: 0x12a9f02 in perf_event_open (std.zig)

1783911740
aixin!aixin@user/aixin
            .NOENT => unreachable, // Invalid type setting.

1783911742
aixin!aixin@user/aixin
                      ^

1783911744
aixin!aixin@user/aixin
/home/aixin/tools/poop/src/main.zig:209:54: 0x11f879f in main (main.zig)

1783911746
aixin!aixin@user/aixin
                perf_fd.* = std.posix.perf_event_open(&attr, 0, -1, perf_fds[0], PERF.FLAG.FD_CLOEXEC) catch |err| {

1783911777
aixin!aixin@user/aixin
is it because I run linux in WSL?

1783911786
perryprog!~perryprog@wikipedia/perryprog
probably yeah

1783911795
perryprog!~perryprog@wikipedia/perryprog
might be blocking the perf_event_open syscall

1783911821
perryprog!~perryprog@wikipedia/perryprog
I ran into the same issue when I tried to run it in a container on macOS. I think there's a way to allow the syscall there but I didn't care enough to look :P

1783912024
aixin!aixin@user/aixin
perryprog: May be I can just compile my project and poop in Windows...

1783912050
perryprog!~perryprog@wikipedia/perryprog
nah

1783912070
perryprog!~perryprog@wikipedia/perryprog
then you don't have the perf_event_open syscall at all

1783922778
aixin!aixin@user/aixin
it seems that poop can not compile at windows

1783922883
aixin!aixin@user/aixin
is this my environment problem or poop just don't support windows?

1783922946
aixin!aixin@user/aixin
I got two error when I run command zig 0.16.0 build:

1783922951
aixin!aixin@user/aixin
src\main.zig:175:56: error: expected type '*anyopaque', found 'comptime_int'

1783922954
aixin!aixin@user/aixin
    var perf_fds: [perf_measurements.len]fd_t = @splat(-1);

1783922967
aixin!aixin@user/aixin
src\progress.zig:39:28: error: expected type 'i32', found '*anyopaque'

1783922970
aixin!aixin@user/aixin
    _ = std.os.linux.ioctl(stdout, TIOCGWINSZ, @intFromPtr(&winsize));

1783923190
foxglv!~foxglv@user/sunflr
aixin: well, it is using a Linux specific function so it doesn'm work

1783923220
foxglv!~foxglv@user/sunflr
maybe if you specify the build to be windows specific?

1783923229
foxglv!~foxglv@user/sunflr
(idk how)

1783923673
aixin!aixin@user/aixin
I try zig 0.16.0 build -Dtarget=x86_64-windows , but got same error

1783923694
squeek502!~squeek502@user/squeek502
aixin, there's https://github.com/D-Berg/crap which compiles for windows but will only report wall time/memory usage

1783923777
aixin!aixin@user/aixin
squeek502, thanks, i will try it

1783955987
j416!~j416@user/j416
er. ^ ...with a project this seemingly well crafted I would have expected a little more effort in naming its tools. What a joke. It was fun before it even started, Zig journey ends here this time, I'm out. Bye, Zig o/

1783956237
Gliptic!~glip@2a01:4f8:c012:91f3::1
??

1783956316
slynk!~ryank@user/slynk
I think he was talking about poop and crap

1783956469
Sivecano-!~Sivecano@user/Sivecano
oh, no! how dare people have some fun in the free software space?

1783956479
slynk!~ryank@user/slynk
ikr

1783956583
Sivecano-!~Sivecano@user/Sivecano
we must immediately hold a meeting to adjust to the correct degree of Professionalism. after all: what would your manager think of you?

1783956689
ifreund!2940d10f8b@user/ifreund
what if my manager is the person who named the tool poop?

1783956782
foxglv!~foxglv@user/sunflr
why would they leave if there's tools named like that in C anyway?

1783956812
Gliptic!~glip@2a01:4f8:c012:91f3::1
people like j416 would always find some excuse to give up

1783956820
slynk!~ryank@user/slynk
imo I think it was more about being dramatic and not about zig

1783956829
foxglv!~foxglv@user/sunflr
yeah lol

1783956911
foxglv!~foxglv@user/sunflr
i've seen people frustrated with Zig at least 2 times now though x3 I guess it's just no for everyone

1783956991
perryprog!~perryprog@wikipedia/perryprog
no way; that is /wild/

1783957008
perryprog!~perryprog@wikipedia/perryprog
(Leaving over a project being named "poop" or "crap")

1783957079
perryprog!~perryprog@wikipedia/perryprog
Besides it's a Performance Optimizer Observation Platform and a Counter Reading Acquisition Platform. Very enterprise-ready. Very professional.

1783957081
foxglv!~foxglv@user/sunflr
maybe they thought the name reflected the lang? X3

1783957139
rockorager!~rockorage@mail.spunky.lol
lol someone quitting over the name of a few projects out there is someone who was looking for a reason.

1783957172
aks!~m-n2ods6@user/akselmo
sudo apt install poop crap

1783957220
perryprog!~perryprog@wikipedia/perryprog
Remember: don't forget to flush

1783957488
Sivecano-!~Sivecano@user/Sivecano
perryprog: every time that I do forget to flush, I remember that talk...

1783957510
perryprog!~perryprog@wikipedia/perryprog
:)

1783958160
aixin!aixin@user/aixin
i'm sorry for the stupid question about poop that lead to the lost of a member.. (ㆆ_ㆆ)

1783958220
aixin!aixin@user/aixin
i finally build 'crap' in windows by the way XD

1783958262
Gliptic!~glip@2a01:4f8:c012:91f3::1
no loss

1783958669
lingxu!~lingxu@user/lingxu
it is good https://andrewkelley.me/post/my-thoughts-bun-rust-rewrite.html

1783958731
perryprog!~perryprog@wikipedia/perryprog
tbh we need a profiling tool called Performance Event Explorer now

1783958763
aks!~m-n2ods6@user/akselmo
in zig, we pee after poop

1783958859
Sivecano-!~Sivecano@user/Sivecano
everyone talks about the zig -> rust of bun, but nobody talks about the rust -> zig of roc ....

1783958971
perryprog!~perryprog@wikipedia/perryprog
am literally currently reading https://gist.github.com/rtfeldman/77fb430ee57b42f5f2ca973a3992532f

1783960861
Amun-Ra!~amun-ra@retro.rocks
I've read Andrew's post about it

1783961121
perryprog!~perryprog@wikipedia/perryprog
hey so when is the ZSF gonna start selling ziguana plushies

1783961130
perryprog!~perryprog@wikipedia/perryprog
and allocgator plushies

1783961661
foxglv!~foxglv@user/sunflr
oh that's what it's supposed to be lol. Allocgator x3

1783961677
perryprog!~perryprog@wikipedia/perryprog
(Source: https://codeberg.org/ziglang/logo)

1783975624
dominick72_97!d47d3c244a@user/dominick72-97:46390
perryprog: that's hilarious

1783975663
dominick72_97!d47d3c244a@user/dominick72-97:46390
the poop and crap acronyms

1783985061
rvrb!~rvrb@97-120-122-143.ptld.qwest.net
I am tickled absolutely endlessly that someone rage quite because of poop and crap

